--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
     <string name="app_name">SummerProject23</string>
+    <string name="profile">Profile</string>
+    <string name="main">Main</string>
+    <string name="favorite">Favorite</string>
+    <string name="search">Search</string>
+    <string name="add">Add</string>
+    <string name="sign_in">Sign In</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="welcome">Hi!! It\'s my App</string>
+    <string name="security">Security</string>
+    <string name="payments">Payments</string>
+    <string name="back">Back</string>
+    <string name="main_notification">It\'s your daily notification!</string>
+    <string name="click_me">Click Me</string>
+    <string name="no_notifications">No Notifications</string>
+    <string name="nice">Nice!</string>
+    <string name="previous_fragment_class">previousFragmentClass</string>
 </resources>
