add strings in strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,9 @@
     <string name="add">Add</string>
     <string name="sign_in">Sign In</string>
     <string name="sign_up">Sign Up</string>
+    <string name="step_id">Шаг %d:</string>
+    <string name="step_example">Шаг 1</string>
+    <string name="desc_example">Тщательно вымойте картошку и отварите ее в кожуре. За степенью готовностью необходимо следить, иначе картофель переварится и будет непригоден. Чтобы кожура не лопнула во время варки, можно проткнуть зубочисткой каждый корнеплод или добавить в кастрюлю с водой щепотку соли и каплю уксуса. Время варки — 20 минут. После снимите с огня, слейте кипяток, остудите и очистите от кожуры. А затем нарежьте на кубики.</string>
+    <string name="ingredients">Ингредиенты</string>
 
 </resources>
