add fixed base 6

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="main">Main</string>
     <string name="favorite">Favorite</string>
     <string name="search">Search</string>
-    <string name="add">Add</string>
+    <string name="add">Добавить</string>
     <string name="sign_in">Sign In</string>
     <string name="registration">Registration</string>
     <string name="text_name">Еда</string>
@@ -15,5 +15,15 @@
     <string name="recipe_is_saved">Рецепт успешно сохранен!</string>
     <string name="recipe_added_to_favorite">Рецепт добавлен в избранное!</string>
     <string name="recipe_removed_from_favorite">Рецепт удален из избранного!</string>
+    <string name="recipe_not_found">Такого рецепта нет.</string>
+    <string name="need_all_data">Введите все данные!</string>
+    <string name="user_saved">Пользователь сохранен!</string>
+    <string name="password">Пароль</string>
+    <string name="email">Почта</string>
+    <string name="username">Ваше имя</string>
+    <string name="name">Название</string>
+    <string name="description">Описание</string>
+    <string name="url_photo">Ссылка на фото</string>
+    <string name="register">Регистрация</string>
 
 </resources>
