--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,14 @@
 <resources>
     <string name="app_name">SummerProject23</string>
-    <string name="profile">Profile</string>
-    <string name="main">Main</string>
-    <string name="favorite">Favorite</string>
-    <string name="search">Search</string>
+    <string name="profile">Профиль</string>
+    <string name="main">Главная</string>
+    <string name="favorite">Избранное</string>
+    <string name="search">Поиск</string>
     <string name="add">Добавить</string>
     <string name="sign_in">Вход</string>
     <string name="registration">Registration</string>
+    <string name="sign_in">Зарегистрироваться</string>
+    <string name="sign_up">Войти</string>
     <string name="text_name">Еда</string>
     <string name="step_id">Шаг %d:</string>
     <string name="step_example">Шаг 1</string>
@@ -15,7 +17,11 @@
     <string name="recipe_is_saved">Рецепт успешно сохранен!</string>
     <string name="recipe_added_to_favorite">Рецепт добавлен в избранное!</string>
     <string name="recipe_removed_from_favorite">Рецепт удален из избранного!</string>
-    <string name="recipe_not_found">Такого рецепта нет.</string>
+    <string name="nothing_found">Ничего не найдено</string>
+    <string name="hint_search">Найти рецепт</string>
+    <string name="recipe_deleted">Рецепт удалён</string>
+    <string name="no_text">No text</string>
+    <string name="recipe_not_found">Ничего не найдено</string>
     <string name="need_all_data">Заполните все поля!</string>
     <string name="user_saved">Пользователь сохранен!</string>
     <string name="password">Пароль</string>
