--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,13 @@
 <resources>
     <string name="app_name">SummerProject23</string>
-    <string name="profile">Profile</string>
-    <string name="main">Main</string>
-    <string name="favorite">Favorite</string>
-    <string name="search">Search</string>
-    <string name="add">Add</string>
-    <string name="sign_in">Sign In</string>
-    <string name="sign_up">Sign Up</string>
+    <string name="profile">Профиль</string>
+    <string name="main">Главная</string>
+    <string name="favorite">Избранное</string>
+    <string name="search">Поиск</string>
+    <string name="add">Добавить</string>
+    <string name="sign_in">Зарегистрироваться</string>
+    <string name="sign_up">Войти</string>
     <string name="text_name">Еда</string>
-    <string name="step_id">Шаг %d:</string>
-    <string name="step_example">Шаг 1</string>
-    <string name="desc_example">Тщательно вымойте картошку и отварите ее в кожуре. За степенью готовностью необходимо следить, иначе картофель переварится и будет непригоден. Чтобы кожура не лопнула во время варки, можно проткнуть зубочисткой каждый корнеплод или добавить в кастрюлю с водой щепотку соли и каплю уксуса. Время варки — 20 минут. После снимите с огня, слейте кипяток, остудите и очистите от кожуры. А затем нарежьте на кубики.</string>
     <string name="ingredients">Ингредиенты</string>
     <string name="hint_search">Найти рецепт…</string>
     <string name="recipe_is_saved">Рецепт успешно сохранен!</string>
