--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SummerProject23</string>
+    <string name="app_name">Рецепты</string>
     <string name="profile">Профиль</string>
     <string name="main">Главная</string>
     <string name="favorite">Избранное</string>
